Description overflow handled & fixes

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,13 +39,17 @@ main {
 .task {
   display: grid;
   grid-template-columns: 2.5fr 2.5fr 1fr;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: min-content 3fr min-content;
   overflow: hidden;
   border-radius: 10px;
   padding: 10px;
-  height: 150px;
+  height: 180px;
   margin: 20px;
+  transition: 1s;
   background-color: #d9d9d9;
+  &--expanded{
+    height: min-content;
+  }
   &__title {
     font-size: 3rem;
   }
@@ -61,13 +65,15 @@ main {
   &__description {
     font-size: 1.6rem;
     grid-column: 1/3;
+    overflow-wrap: break-word;
+    overflow: hidden;
   }
   &__delete {
     font-size: 3rem;
     align-self: center;
     justify-self: center;
   }
-  .task__delete-btn {
+  &__delete-btn {
     cursor: pointer;
     border: none;
     margin: 0;
@@ -75,6 +81,19 @@ main {
     width: auto;
     overflow: visible;
     background: transparent;
+  }
+  &__arrow {
+    grid-column: 1/-1;
+    grid-row: 3;
+    align-self: center;
+    justify-self: center;
+    font-size: 3rem;
+    color: #4e4e4e;
+    transition: .3s;
+    cursor: pointer;
+    &--rotate{
+      transform: rotate(180deg);
+    }
   }
 }
 .event-input {
